# t5_base_model_fast_api

./: .gitignore  README.md  pyproject.toml
pyproject/: main.py
pyproject/core/: config.py
pyproject/schemes/: translate.py
